# hypatia

./: .gitignore  CONTRIBUTING.md  FUSED_MLP_FIX_SUMMARY.md  FUTURE_WORK.md  KERNEL_COMPARISON.md  KERNEL_OPTIMIZATION_ANALYSIS.md  MANIFESTO.md  PLAN_C_IMPLEMENTATION.md  README.md  ROADMAP  SESSION_SUMMARY.md  gpu_test.py  requirements-dev.txt  requirements.txt  upgrade_to_optimized_kernel.sh  validate_fused_mlp_fix.py
docs/: academic_report.md  academic_report_tr.md  hypatia_paper.md  hypatia_paper_tr.md
examples/: academic_benchmark.py  real_model_demo.py
hypatia-core/src/: lib.rs
hypatia_core/: Cargo.toml  FUSED_LINEAR_RELU_IMPLEMENTATION.md  QUICK_START_FUSION_TEST.md  README.md  SAFETY_TESTING_GUIDE.md  SETUP_GUIDE.md  bench_large.py  bench_native.py  bench_quant.py  build.py  build.rs  numpy_demo.py  pyproject.toml  python_demo.py  test_kernel_only.py  verify_setup.py
hypatia_core/benchmarks/: benchmark_suite.py  mlp_fusion_benchmark.py
hypatia_core/csrc/: README.md  fused_attention.cpp  fused_attention_kernel.cu  fused_gelu_mlp.cpp  fused_gelu_mlp_kernel.cu  fused_layernorm.cpp  fused_layernorm_kernel.cu  fused_linear_relu.cpp  fused_linear_relu.cpp.v2  fused_linear_relu_kernel.cu  fused_linear_relu_kernel_v2.cu
hypatia_core/demos/: benchmark_vs_inductor.py  demo_qwen.py
hypatia_core/docs/: ADDING_FUSION_PATTERNS.md  USER_GUIDE.md
hypatia_core/examples/: bench_core.py  benchmark.py  benchmark_comparison.py  benchmark_mlp.py  benchmark_ollama.py  benchmark_resnet50.py  benchmark_transformer.py  hypatia_frontend.py  hypatia_showcase.py  mlp_multiconfig_benchmark.py  mlp_perf_sweep.py  mlp_perf_test.py  mlp_safety_test.py  mlp_safety_test_dual_mode.py  mlptest.py  numpy_demo.py  pyproject.toml  python_demo.py  quickstart.py  real_model_test.py  resnet50.py  rotation3d_demo.rs  rotation_demo.rs  test_fused_linear_relu.py  test_hypatia_factorization.py  test_hypatia_phase1.py  tinytransformer.py
hypatia_core/examples/eski/: benchmark_harness.py  benchmark_harness_v2.py  benchmark_llama.py  benchmark_pipeline.py  benchmark_simple.py  complete_fx_parser.py  hypatia_showcase.py  numpy_demo.py  rotation_demo.rs  run_tests.sh  symbolic_demo.py  test_ai_pipeline.py  test_attention_optimization.py  test_autodiff.py  test_comprehensive_suite.py  test_demo.py  test_egraph_phase2.py  test_faz12_eval_safety.py  test_fx_integration_phase2.py  test_fx_phase1.py  test_fx_phase2.py  test_hypatia_core_optimizations.py  test_hypatia_phase1.pyZone.Identifier  test_layernorm_optimization.py  test_numeric_verification.py  test_phase2_final.py  test_phi3_only.py  test_pytorch_integration.py  test_real_models.py  test_shape_guard_and_cost.py
hypatia_core/hypatia_core/: __init__.py  autotuner.py  dashboard.py  fused_modules.py  mixed_precision.py  native_model.py  neuromorphic_model.py  optimizer.py  profiler.py  semantic_validation.py  sparse.py  visualization.py
hypatia_core/hypatia_core/fused_kernels/: README.md  __init__.py  build.sh  linear_relu.cpp  linear_relu_cuda.cu  setup.py
hypatia_core/hypatia_core/hypatia_core/: __init__.py
hypatia_core/src/: egraph_optimizer.rs  fx_bridge.rs  geometric_ops.rs  gpu_backend.rs  lib.rs  mixed_precision.rs  multivector2d.rs  multivector3d.rs  native_ops.rs  neuromorphic.rs  numpy_integration.rs  python_bindings.rs  quantize.rs  semantic_validation.rs  sparse_ops.rs  symbolic.rs  symbolic_ga2d.rs  symbolic_ga3d.rs  visualization.rs
hypatia_core/tests/: comprehensive_test.py  debug_backend.py  mlp_perf_test.py  mlp_safety_test.py  test_attention_fusion.py  test_autotuner.py  test_backend_registration.py  test_cuda_extension.py  test_dashboard.py  test_mixed_precision.py  test_neuromorphic.py  test_profiler.py  test_semantic_validation.py  test_sparse.py  test_visualization.py
notebooks/: hypatia_colab_demo.ipynb
