[package]
name = "hypatia-core"
version = "0.1.0"
edition = "2021"
description = "A software-defined paradigm for next-generation AI and computation using Geometric Algebra"
authors = ["Ender <asimeryol@gmail.com>"]
license = "MIT"
repository = "https://github.com/mahreman/hypatia"
readme = "README.md"

[lib]
name = "hypatia_core"
crate-type = ["cdylib", "rlib"]

[features]
# Varsayılan: saf Rust (Python kapalı)
default = []
python = ["dep:pyo3", "dep:numpy", "dep:rayon"]
parallel = ["dep:rayon"]

[dependencies]
# Python/NumPy bağımlılıkları opsiyonel; yalnızca `-F python` ile etkinleşir
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }
numpy = { version = "0.21.0", optional = true }
# Paralel toplu dönüşüm için
rayon = { version = "1.11", optional = true }

[dev-dependencies]

[[example]]
name = "rotation_demo"

[[example]]
name = "rotation3d_demo"

[package.metadata.maturin]
bindings = "pyo3"
