[package]
name = "hypatia-core"
version = "0.1.0"
edition = "2021"
description = "A software-defined paradigm for next-generation AI and computation using Geometric Algebra"
authors = ["Ender <asimeryol@gmail.com>"]
license = "MIT"
repository = "https://github.com/mahreman/hypatia"
readme = "README.md"

[lib]
name = "hypatia_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "dep:numpy", "dep:rayon"]
parallel = ["dep:rayon"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }
numpy = { version = "0.21.0", optional = true }
rayon = { version = "1.11", optional = true }

# v3.0 E-graph motoru için
egg = "0.9.5"

# FIX: f64 Eq/Ord/Hash için NotNan wrapper'ı
ordered-float = "3.4.0"

# ✅ YENİ: Jenerik GA (FEZ 11.5) için eklendi
num-traits = "0.2"

# ✅ Task 2.4: Verbose Logging
log = "0.4"
env_logger = "0.11"


[package.metadata.maturin]
bindings = "pyo3"