[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hypatia-core"
version = "1.0.0"
description = "Hardware-Aware Symbolic Compiler for PyTorch — built on Geometric Algebra and E-graph optimization"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hypatia Project Contributors"},
]
keywords = ["pytorch", "compiler", "geometric-algebra", "e-graph", "optimization", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-subtests",
    "maturin>=1.0,<2.0",
]
benchmarks = [
    "transformers>=4.30.0",
    "matplotlib>=3.5.0",
]

[tool.maturin]
features = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
